[add]active_adminとuserログイン新規登録

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>EGC</title>
+    <title>E.G.C.</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
