--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,21 @@
  *= require_tree .
  *= require_self
  */
+
 @import "bootstrap";
+@import 'font-awesome-sprockets';
+@import "font-awesome";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #FFFFFF;
+  height: 100%;
+}
+
+
+
