--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,13 +1,13 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <h6>アカウントをお持ちの方は<strong><%= link_to "こちら", new_session_path(resource_name) %></strong></h6>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+  <h6>パスワードを忘れた方は<%= link_to "こちら", new_password_path(resource_name) %></h6>
+<% end %>
+
+<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+  <h6>まだアカウントをお持ちでない方は<strong><%= link_to "新規登録", new_registration_path(resource_name) %></strong></h6>
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
