--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,14 @@
 
   <body>
     <header>
-      <nav class="navbar-expand-lg navbar-dark bg-dark p-3">
-        <div class="collapse navbar-collapse">
-          <%= link_to "E.G.C.", root_path, class: "navbar-brand" %>
-          <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+      <nav class="navbar navbar-expand-lg navbar-dark sticky-top bg-dark p-3">
+        <%= link_to "E.G.C.", root_path, class: "navbar-brand  mb-0 h1" %>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav left">
             <!--サインインとアウト時の表示を変更-->
             <% if user_signed_in? %>
 
@@ -25,13 +29,22 @@
                 <%= link_to 'E.G.C.？', homes_about_path, class: "nav-link" %>
               </li>
               <li class="nav-item">
-                <%= link_to '作品一覧', posts_path, class: "nav-link" %>
+                <%= link_to '作品一覧', root_path, class: "nav-link" %>
               </li>
               <li class="nav-item">
                 <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "nav-link" %>
               </li>
               <li class="nav-item">
                 <%= link_to 'マイページ', user_path(current_user), class: "nav-link" %>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                ログインユーザー名</a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+                    <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+                    <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+                  </div>
               </li>
 
             <% else %>
@@ -42,23 +55,32 @@
                 <%= link_to 'E.G.C.？', homes_about_path, class: "nav-link" %>
               </li>
               <li class="nav-item">
-                <%= link_to '新規登録', new_user_registration_path, class: "nav-link" %></li>
+                <%= link_to '新規登録(無料)', new_user_registration_path, class: "nav-link" %></li>
               <li class="nav-item">
                 <%= link_to 'ログイン', new_user_session_path, class: "nav-link" %>
-                </li>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                ゲスト
+                </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+                  </div>
+              </li>
 
             <% end %>
           </ul>
         </div>
       </nav>
-
     </header>
-  <!--/ヘッダー-->
+
     <div class="container">
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
 
       <%= yield %>
     </div>
+
+
   </body>
 </html>
