--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,5 +26,29 @@
 
 body {
   background-color: #FFFFFF;
+}
+
+.wrapper{
+    min-height: 100vh;
+    position: relative;
+    padding-bottom: 150px;
+    box-sizing: border-box;
+}
+
+.container{
   height: 100%;
 }
+
+
+footer {
+  width: 100%;
+  height: 100px;
+  background-color: #0f4c81;
+  color: #fff;
+  text-align: center;
+  padding: 40px 0;
+
+  position: absolute;
+  bottom: 0px;
+}
+
