--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.posts-card {
+	width: 100%;
+}
+
+article {
+	width: 240px;
+	margin: auto;
+	margin-bottom: 20px;
+	box-shadow: 0 0 5px #999;
+}
+
+.post {
+	margin-auto: 2%;
+	margin-bottom: 20px;
+	width: 100%;
+	border: 3px;
+	border-color: #999;
+}
