--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -12,7 +12,7 @@
         <small id="title-tip" class="form-text text-muted">
             タイトルを入力してください！
         </small>
-        <%= f.text_field :title, class: 'form-control' %>
+        <%= f.text_field :title, class: "form-control" %>
 
     </div>
     <div class="form-group">
@@ -20,7 +20,7 @@
         <small id="subtitle-tip" class="form-text text-muted">
             タイトルの詳細を簡潔に入力してください！
         </small>
-        <%= f.text_field :title, class: 'form-control'%>
+        <%= f.text_field :subtitle, class: "form-control" %>
     </div>
     <div class="form-group">
         <%= f.label :post_image, '作品画像（必須）' %><br>
@@ -30,42 +30,42 @@
         <%= f.file_field :post_image %>
     </div>
     <div class="form-group">
-        <%= f.label :body, '投稿内容(必須)' %><br>
+        <%= f.label :body, '投稿内容（必須）' %><br>
         <small id="body-tip" class="form-text text-muted">
             作品について自由にアピールしてください！！（例：背景・思い/どのような作品か/苦労した点　等）
         </small>
-        <%= f.text_area :body, class: 'form-control', rows:10 %>
+        <%= f.text_area :body, class: "form-control", rows:10 %>
     </div>
     <div class="form-group">
         <%= f.label :portfolio_url, '作品URL' %><br>
         <small id="portfolio_url-tip" class="form-text text-muted">
             作品のURLを公開してください！ (例：https://xxx.xx...)
         </small>
-        <%= f.text_field :portfolio_url, class: 'form-control' %>
+        <%= f.text_field :portfolio_url, class: "form-control" %>
     </div>
     <div class="form-group">
         <%= f.label :source_code_url, 'ソースコードURL GitHubのリポジトリURL 等' %><br>
         <small id="source_code_url-tip" class="form-text text-muted">
-            ソースコードが確認できるURLを公開してください！（例：　https://github.com/xxxx　等）
+            ソースコードが確認できるURLを公開してください！（例：https://github.com/xxxx　等）
         </small>
-        <%= f.text_field :source_code_url, class: 'form-control' %>
+        <%= f.text_field :source_code_url, class: "form-control" %>
     </div>
     <div class="form-group">
         <%= f.label :message, '一言メッセージ' %><br>
         <small id="message-tip" class="form-text text-muted">
             一言メッセージを入力してください！（例：質問、アドバイスお願いします！/作品について語り合いましょう！　等）
         </small>
-        <%= f.text_field :message, class: 'form-control' %>
+        <%= f.text_field :message, class: "form-control" %>
     </div>
     <div class="form-group">
         <%= f.label :development_environment_text, '開発環境' %><br>
         <small id="development_environment_text-tip" class="form-text text-muted">
             開発環境を入力してください！(例：Ruby 2.5.7/Rails 5.2.4.4　等)
         </small>
-        <%= f.text_field :development_environment_text, class: 'form-control' %>
+        <%= f.text_field :development_environment_text, class: "form-control" %>
     </div>
 
-    <h6>必須項目に漏れや誤字脱字はありませんか？投稿内容に間違いがないか最終確認が済みましたら 編集完了ボタンを押しましょう</h6>
-    <%= f.submit '編集完了', class: 'btn btn-info btn-block' %>
+    <h6>必須項目に漏れや誤字脱字はありませんか？投稿内容に間違いがないか最終確認が済みましたら 投稿ボタンを押しましょう</h6>
+    <%= f.submit '投稿', class: "btn btn-info btn-block" %>
 
 <% end %>
