--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,44 +1,26 @@
 <div class = "row">
   <div class ="col-md-5 offset-md-3">
-    <h4>アカウント編集</h4>
+    <h4 class="title">アカウント編集</h4>
+
+    <%= form_with model:@user do |f| %>
+
+        <div class="form-group">
+          <%= f.label :アカウント画像 %>
+          <%= f.file_field :avatar, class:"form-control-file" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :アカウント名 %>
+          <%= f.text_field :nick_name, class:"form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :introduction, '自己紹介' %><br>
+          <%= f.text_area :introduction, class:"form-control", rows:"3" %>
+        </div>
+        <div class="actions">
+          <%= f.submit '保存', class: "btn btn-primary btn-block" %>
+        </div>
+
+    <% end %>
+
   </div>
 </div>
-
-<%= form_with(model:@user, local:true) do |f| %>
-
-  <div class="field">
-    <div class = "row">
-      <div class ="col-md-6 offset-md-3">
-        <%= f.label :アカウント画像 %>
-        <%= f.file_field :avatar, class:"form-control-file" %>
-      </div>
-    </div>
-  </div>
-
-  <div class="field">
-    <div class = "row">
-      <div class ="col-md-4 offset-md-3">
-        <%= f.label :アカウント名 %>
-        <%= f.text_field :nick_name, class:"form-control" %>
-      </div>
-    </div>
-  </div>
-
-  <div class="field">
-    <div class = "row">
-      <div class ="col-md-6 offset-md-3">
-       <%= f.label :自己紹介 %>
-        <%= f.text_field :introduction, class:"form-control", rows:"3"%>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class ="col-md-1 offset-md-8 ">
-      <div class="actions">
-        <%= f.submit '保存', class: "btn btn-primary btn-block" %>
-      </div>
-    </div>
-  </div>
-
-<% end %>
