--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,7 @@ body {
 .wrapper{
     min-height: 100vh;
     position: relative;
+    padding-top: 50px;
     padding-bottom: 150px;
     box-sizing: border-box;
 }
