--- a/app/views/post_comments/_index.html.erb
+++ b/app/views/post_comments/_index.html.erb
@@ -1,21 +1,48 @@
 <% post_comments.each do |comment| %>
   <% unless comment.id.nil? %>
-    <div class="comment-date"><%= l comment.created_at %>
-    </div>
+
     <div class="row">
-      <div class ="col-md-3">
-        <div><%= image_tag comment.post.user.avatar.thumb.url.to_s, :size =>'50x50' %><br>
-          <%= link_to "#{comment.user.nick_name}", user_path(comment.user.id) %>
+      <div class ="col-md-8">
+        <div class="comment-date">コメント：<%= l comment.created_at %>
         </div>
-      </div>
-      <div class ="col-md-9">
-        <div><%= comment.comment %>
+        <div class="row">
+          <div class ="col-md-2 text-center">
+            <div>
+              <%= link_to user_path(comment.user.id) do %>
+                <%= image_tag comment.user.avatar.thumb.url.to_s, :size =>'60x60' %>
+              <% end %>
+              <br><small><%= link_to "#{comment.user.nick_name}", user_path(comment.user.id) %></small>
+            </div>
+          </div>
+          <div class ="col-md-10">
+            <div><%= simple_format comment.comment %>
+            </div>
+          </div>
         </div>
+      <% if comment.user == current_user %>
+        <div class="row">
+          <div class ="col-md">
+            <p><%= link_to '削除', post_post_comment_path(comment.post_id, comment.id), method: :delete, remote: true, class: "btn btn-outline-danger btn-sm" %>
+            </p>
+          </div>
+        </div>
+      <% end %>
       </div>
     </div>
-    <% if comment.user == current_user %>
-      <p><%= link_to 'コメントを削除する', post_post_comment_path(comment.post_id, comment.id), method: :delete, remote: true %>
-      </p>
+
+    <div class="reply_area_<%= comment.id %>">
+      <%= render partial: 'replies/index', locals: { comment: comment} %>
+    </div>
+
+    <% if user_signed_in? %>
+      <%= form_with(model: [comment.post, comment, comment.replies.build] ) do |f| %>
+        <div>
+          <%= f.text_area :comment, class: "form-control", placeholder: "返信をここに" %>
+        </div>
+        <div class="actions text-right">
+          <%= f.submit "送信", class: "btn btn-info md-10" %>
+        </div>
+      <% end %>
     <% end %>
 
   <% end %>
