--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,36 @@
 // Place all the styles related to the homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.main-visual {
+	width: 100%;
+	height: 100%;
+	background-image: image-url('manhattan-3866140_1920.jpg');
+	background-size: cover;
+}
+
+.main-visual-text {
+	height: 100%;
+	width: 50%;
+	background-color:rgba(0,0,0,0.8);
+}
+
+.main-visual-centence {
+	color: white;
+	padding: 12% ;
+	padding: auto;
+	text-align: center;
+}
+
+.main-visual-headline {
+	padding-top: 5%;
+}
+
+.main-centense {
+	padding: 20px;
+}
+
+.row-10{
+	margin-left:-5px;
+	margin-right:-5px;
+}
