--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,36 @@
-<h2>TOP画面です</h2>
+  <div class ="main-visual">
+    <div class ="main-visual-text">
+      <div class="main-visual-centence">
+          <p>「ポートフォリオ」作成してみたけど、<br>
+          作品が眠ったまま...<br>
+          公開できるようなレベルじゃないし...<br>
+          作成しようと思ってはいるけどイメージが湧かない...
+          </p>
+          <h5>でも大丈夫!!</h5>
+        <div class="main-visual-headline">
+          <h2>ポートフォリオを<br>
+            作成したい・作成した なら<strong>E.G.C.</strong>で<br>
+            繋がろう！</h2>
+        </div>
+        <div class="main-centense">
+          <P>
+            ポートフォリオを投稿・閲覧！<br>
+            感想や質問によって同じ志を持つ人と繋がることができる場です。<br>
+            モチベーションUPや自作品のインスピレーション等、<br>
+            あなたの成長のきっかけに！
+          </P>
+
+          <% unless user_signed_in? %>
+            <P><%= link_to '新規登録(無料)', new_user_registration_path, class: "btn btn-outline-danger btn-lg" %>
+            <%= link_to 'ログイン', new_user_session_path, class: "btn btn-outline-success btn-lg" %></P>
+          <% end %>
+          <P><%= link_to 'とりあえず作品を見てみる', posts_path, class: "btn btn-outline-info btn-lg" %><br>
+          <small>※ コメントや投稿は新規登録(無料) またはログインが必要です</small>
+          </P>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
