--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,14 +12,14 @@
   <body>
     <div class="wrapper">
       <header>
-        <nav class="navbar navbar-expand-lg navbar-dark sticky-top bg-dark p-3">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark p-3">
           <%= link_to "E.G.C.", root_path, class: "navbar-brand  mb-0 h1" %>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav left">
+          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <ul class="navbar-nav ">
 
               <% if user_signed_in? %>
 
@@ -37,7 +37,7 @@
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  current_user.nameさん</a>
+                  <%= current_user.nick_name %></a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <%= link_to 'マイページ', user_path(current_user), class: "dropdown-item" %>
                       <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "dropdown-item" %>
@@ -75,7 +75,7 @@
         </nav>
       </header>
 
-      <div class="container">
+      <div>
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
         <%= yield %>
