--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,28 +1,23 @@
 <div class="row">
-  <div class ="col-md-5 offset-md-1">
-      <h4><%= @user.nick_name %>さんのルーム</h4>
+  <div class ="col-md text-center">
+      <h3><%= @user.nick_name %> のルーム</h3>
   </div>
 </div>
-  <div class="row">
-    <div class ="col-md-3 offset-md-1">
-       <%= image_tag @user.avatar.thumb.url.to_s, :size =>'150x150' %>
-    </div>
+<div class="row">
+  <div class ="col-md-3 offset-md-2 text-right">
+     <%= image_tag @user.avatar.thumb.url.to_s, :size =>'200x200' %>
+  </div>
+  <div class="col-md-6">
+    <h5><strong>自己紹介</strong></h5>
+      <p><%= simple_format @user.introduction %></p>
+  </div>
+</div>
 
-    <div class="col-md-8">
-      <table class="table">
-          <tr>
-          <th>自己紹介</th>
-            <th><%= @user.introduction %></th>
-          </tr>
-      </table>
+<% if @user==current_user %>
+  <div class="row">
+    <div class ="col-md-2 offset-md-7 text-center">
+      <%= link_to '編集する', edit_user_path(@user), class: "btn btn-primary btn-sm edit_user_#{@user.id}" %>
     </div>
   </div>
+<% end %>
 
-  <% if @user==current_user %>
-    <div class="row">
-      <div class ="col-md-2 offset-md-7 text-center">
-        <%= link_to '編集する', edit_user_path(@user), class: "btn btn-primary btn-block edit_user_#{@user.id}" %>
-      </div>
-    </div>
-  <% end %>
-<row>
