[add]comment_reply/メール通知機能

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -30,7 +30,25 @@
 	padding: 20px;
 }
 
-.row-10{
-	margin-left:-5px;
-	margin-right:-5px;
+.about-title {
+	color: #57B8D9;
+	padding-top: 8%;
+	padding-bottom: 4%;
+}
+.about-centence {
+	padding: 5%;
+}
+
+
+.about-subtitle {
+	color: #57B8D9;
+	padding-bottom: 2%;
+}
+
+.about-cover {
+	text-align: center;
+}
+
+.about-body {
+	padding-bottom: 2%;
 }
