--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,7 @@
   <div class ="main-visual">
     <div class ="main-visual-text">
       <div class="main-visual-centence">
-          <p>「ポートフォリオ」作成してみたけど、<br>
+          <p>"ポートフォリオ"作成してみたけど、<br>
           作品が眠ったまま...<br>
           公開できるようなレベルじゃないし...<br>
           作成しようと思ってはいるけどイメージが湧かない...
