--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -20,7 +20,7 @@
         <%= f.text_area :introduction, class:"form-control", rows:"16" %>
       </div>
       <div class="actions">
-        <%= f.submit '保存', class: "btn btn-primary btn-block" %>
+        <%= f.submit '保存', class: "btn btn-info btn-block" %>
       </div>
     <% end %>
   </div>
