--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,27 +24,42 @@
   box-sizing: border-box;
 }
 
-body {
-  background-color: #FFFFFF;
-}
-
 .wrapper{
     min-height: 100vh;
     position: relative;
     padding-top: 50px;
     padding-bottom: 150px;
     box-sizing: border-box;
+    *background-image: image-url('manhattan-3866140_1920.jpg');
+    *background-size: cover;
+    *background-color:rgba(0,0,0,0.8);
+    *background-size: cover;
 }
 
-.container{
+body {
+  background-color: #fff;
+  color: #000000;
+}
+
+.main {
+
+}
+
+.container {
   height: 100%;
 }
 
+.heart_red {
+  color: #e54747;
+}
+
+.heart_white {color: #f5f5f5;
+ }
 
 footer {
   width: 100%;
   height: 100px;
-  background-color: #0f4c81;
+  background-color: #000000;
   color: #fff;
   text-align: center;
   padding: 40px 0;
