--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,101 @@
-<h2>E.G.C.って？</h2>
+<div class="container">
+  <div class="about-cover">
+
+    <div class="about-title">
+      <h1><strong>E.G.C.とは？</strong></h1>
+    </div>
+    <div class="2">
+      <p>E.G.C. は、開発エンジニアの卵が、「自他共に楽しみながら成長していくこと」を応援するサイトです。<br>
+        ポートフォリオの紹介（画像、作品についての説明・アピール、GitHubのURL　等）<br>
+        コメントで投稿者と閲覧者のやりとりができます。<br>
+モチベーションUPやインスピレーション、技術面 等、「成長の場」「作品紹介の場」としてご利用ください。
+      </p>
+    </div>
+      <div class="about-subtitle">
+        <h4>サイト名の由来[頭文字]</h4>
+      </div>
+        <div class="about-body">
+          <p>
+            <h5>enjoy：楽しむ</h5>
+              <p>
+                <small>「こんなこと質問していいのかな...」<br>
+                「ネットで質問すると返答者に怒られることがあり、質問が怖い...」</small><br>
+                最初は誰もが初めてです。<br>
+                質問や会話を恐れず、あなたと同じ志を持つ投稿者に<br>
+                気軽に質問やコメントをしてみましょう！
+              </p>
+          <p>
+            <h5>grow：成長</h5>
+            いいね！やコメント・返信より自作品への反応を知ることで<br>
+            自信、モチベーションや改善につなげましょう。<br>
+            コメントや返信で投稿者と閲覧者のやりとりを可能とし、双方の学びに繋げる
+          </p>
+          <p>
+            <h5>communication：同志と繋がる</h5>
+            他の人の作品を見て自作品のインスピレーションのきっかけにしたい...<br>
+            E.G.C.では、投稿作品で気になった機能の実装方法について、制作者に質問ができます！<br>
+            して技術力を高めたい
+          </p>
+        </div>
+
+      <div>
+        <div class="about-title">
+          <h2><strong>E.G.C.の使い方</strong></h2>
+        </div>
+
+          <div class="about-centence">
+            <div class="about-subtitle">
+              <h4>1. 作品を見てみよう</h4>
+            </div>
+            <div class="about-body">
+              <p>
+                みんながどのようなポートフォリオを作成しているか見てみましょう。<br>
+                インスピレーションのきっかけになることも。
+              </p>
+            </div>
+          </div>
+
+          <div class="about-centence">
+            <div class="about-subtitle">
+              <h4>2. 作品を投稿する</h4>
+              </div>
+              <div class="about-body">
+                <p>
+                  E.G.C.アカウントを作成し、作品について自由にアピールしてください！！<br>
+                  作品について、　過程、背景や思い等を書いて、作品とあなたのことを知ってもらいましょう。
+                </p>
+            </div>
+          </div>
+
+          <div class="about-centence">
+            <div class="about-subtitle">
+              <h4>3. 作品に反応する</h4>
+            </div>
+            <div class="about-body">
+              <p>
+                E.G.C.アカウントを作成し、「いいね!」をしましょう。<br>
+                「いいね!」がモチベーションアップに繋がります。<br>
+              </p>
+            </div>
+          </div>
+
+          <div class="about-centence">
+            <div class="about-subtitle">
+              <h4>4. 作品を通して繋がろう</h4>
+            </div>
+            <div class="about-body">
+              <p>
+                作品について、気軽に質問・コメント・感想 等を送って<br>
+                楽しく成長しましょう。<br>
+                <small>
+                  コメントや返信があった際は、<br>
+                  コメントは「投稿者へ」　返信は「作品投稿者からコメントをした人」に<br>
+                  メールで通知されます。
+                </small>
+              </p>
+            </div>
+          </div>
+      </div>
+
+    </div>
+ </div>
