--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark p-3">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #111F4D">
           <%= link_to "E.G.C.", root_path, class: "navbar-brand  mb-0 h1" %>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -75,7 +75,7 @@
         </nav>
       </header>
 
-      <div>
+      <div class="main">
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
         <%= yield %>
