--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,24 @@
-<div class="row">
-  <div class ="col-md text-center">
-      <h3><%= @user.nick_name %> のルーム</h3>
-  </div>
-</div>
-<div class="row">
-  <div class ="col-md-3 offset-md-2 text-right">
-     <%= image_tag @user.avatar.thumb.url.to_s, :size =>'200x200' %>
-  </div>
-  <div class="col-md-6">
-    <h5><strong>自己紹介</strong></h5>
-      <p><%= simple_format @user.introduction %></p>
-  </div>
-</div>
-
-<% if @user==current_user %>
+<div class="container">
   <div class="row">
-    <div class ="col-md-2 offset-md-7 text-center">
-      <%= link_to '編集する', edit_user_path(@user), class: "btn btn-primary btn-sm edit_user_#{@user.id}" %>
+    <div class ="col-md text-center">
+        <h3><%= @user.nick_name %> のルーム</h3>
     </div>
   </div>
-<% end %>
+  <div class="row">
+    <div class ="col-md-3 offset-md-2 text-right">
+       <%= image_tag @user.avatar.thumb.url.to_s, :size =>'200x200' %>
+    </div>
+    <div class="col-md-6">
+      <h5><strong>自己紹介</strong></h5>
+        <p><%= simple_format @user.introduction %></p>
+    </div>
+  </div>
 
+  <% if @user==current_user %>
+    <div class="row">
+      <div class ="col-md-2 offset-md-7 text-center">
+        <%= link_to '編集する', edit_user_path(@user), class: "btn btn-info btn-sm edit_user_#{@user.id}" %>
+      </div>
+    </div>
+  <% end %>
+</div>
