--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <div class="about-cover">
 
     <div class="about-title">
@@ -8,7 +8,7 @@
       <p>E.G.C. は、開発エンジニアの卵が、「自他共に楽しみながら成長していくこと」を応援するサイトです。<br>
         ポートフォリオの紹介（画像、作品についての説明・アピール、GitHubのURL　等）<br>
         コメントで投稿者と閲覧者のやりとりができます。<br>
-モチベーションUPやインスピレーション、技術面 等、「成長の場」「作品紹介の場」としてご利用ください。
+        モチベーションUPやインスピレーション、技術面 等、「成長の場」「作品紹介の場」としてご利用ください。
       </p>
     </div>
       <div class="about-subtitle">
