--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,13 +27,13 @@
                   <%= link_to 'トップ', root_path, class: "nav-link" %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to 'E.G.C.？', homes_about_path, class: "nav-link" %>
+                  <%= link_to 'E.G.C.とは？', homes_about_path, class: "nav-link" %>
                 </li>
                 <li class="nav-item">
                   <%= link_to '作品一覧', posts_path, class: "nav-link" %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to '投稿', new_post_path, class: "nav-link" %>
+                  <%= link_to '新規投稿', new_post_path, class: "nav-link" %>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -71,6 +71,7 @@
 
               <% end %>
             </ul>
+
           </div>
         </nav>
       </header>
@@ -82,7 +83,7 @@
       </div>
 
       <footer>
-        <div class="container-fluid">
+        <div>
             Copyright © EGC Inc. All Rights Reserved.
         </div>
       </footer>
