--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <div class="row">
       <div class ="col-md text-center">
         <h2 class=>投稿フォーム</h2>
@@ -11,7 +11,7 @@
             <div class="form-group">
                 <%= f.label :title, '投稿タイトル（必須）' %><br>
                 <small id="title-tip" class="form-text text-muted">
-                    作品名を入力してください！
+                    [改行不可]作品名を入力してください！
                 </small>
                 <%= f.text_field :title, class: "form-control" %>
 
@@ -19,7 +19,7 @@
             <div class="form-group">
                 <%= f.label :subtitle, 'サブタイトル（必須）' %><br>
                 <small id="subtitle-tip" class="form-text text-muted">
-                    作品テーマを入力してください！（例：ポートフォリオを紹介するWebサイトです 等）
+                    [改行不可]作品テーマを入力してください！（例：ポートフォリオを紹介するWebサイトです 等）
                 </small>
                 <%= f.text_area :subtitle, class: "form-control" %>
             </div>
