--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
 
     <div class="col-md-3">
@@ -15,7 +15,7 @@
     <div class ="col-md-9">
 
         <div class="row">
-          <div class ="col-md">
+          <div class ="col-md text-right">
             <div class="post-date">
               投稿日時：<%= l @post.created_at %>
             </div>
@@ -23,9 +23,9 @@
         </div>
 
         <div class="row">
-          <div class ="col-md text-center">
+          <div class ="col-md">
             <h2><strong><%= @post.title %></strong></h2>
-            <h4><%= simple_format @post.subtitle %></h4>
+            <h4><%= @post.subtitle %></h4>
             <%= image_tag @post.post_image.thumb.url.to_s, :size =>'818x480' %>
           </div>
         </div>
@@ -33,7 +33,9 @@
         <div class="row">
           <div class ="col-md">
             <p><%= link_to @post.portfolio_url %><br>
-              <small>＊ 作品画像下にURLがある場合は基本的に作品に直接アクセス可能ですが、作品にアクセス不可の場合は当ページが表示されます
+              <small>＊ 作品にアクセス不可の場合：
+                　[作品画像下にURLがない →投稿者より提出がない]
+                　[作品画像下にURLがあるが繋がらない →当ページへリダイレクトされます]
               </small>
             </p>
           </div>
@@ -42,47 +44,50 @@
         <div class="row">
           <div class ="col-md-2 text-right">
             <%= link_to user_path(@post.user) do %>
-              <%= image_tag @post.user.avatar.thumb.url.to_s, :size =>'85x85' %>
+              <%= image_tag @post.user.avatar.thumb.url.to_s, :size =>'85x85' ,class: "rounded-circle" %>
             <% end %>
           </div>
-          <div class ="col-md-3">
+          <div class ="col-md-5">
             <strong><%= @post.user.nick_name %></strong>
           </div>
           <div class ="col-md-2">
             <h5>
               <% if @post.favorited_by?(current_user) %>
                 <%= link_to post_favorites_path(@post), method: :delete do %>
-                  <strong><i class="fas fa-heart fa-lg heart_red"></i></strong>
+                  <strong><i class="fas fa-heart fa-lg heart-red"></i></strong>
                 <% end %>
               <% else %>
                 <%= link_to post_favorites_path(@post), method: :post do %>
-                  <i class="fas fa-heart fa-lg heart_white"></i>
+                  <i class="fas fa-heart fa-lg heart-white"></i>
                 <% end %>
               <% end %>
               <%= @post.favorites.count %>
             </h5>
           </div>
-          <div class ="col-md-5">
-            <h5>コメント：<%= @post.post_comments.count %></h5>
+          <div class ="col-md-3">
+            <h5>
+            <i class="fas fa-comment-dots fa-lg"></i>
+            <%= @post.post_comments.count %>
+          </h5>
           </div>
         </div>
 
         <div class="row">
           <div class ="col-md">
-            <p><h6><strong>詳細：</strong></h6>
+            <p><h6><strong>【 本文 】</strong></h6>
               <%= simple_format @post.body %>
             </p>
           </div>
         </div>
 
         <div class="row">
-          <div class ="col-md-8">
-            <p><h6><strong>ひとこと：</strong></h6>
+          <div class ="col-md-7">
+            <p><h6><strong>【 ひとこと 】：</strong></h6>
             <%= simple_format @post.message %>
             </p>
           </div>
-          <div class ="col-md-4">
-            <p><h6><strong>開発環境</strong></h6>
+          <div class ="col-md-5">
+            <p><h6><strong>【 開発環境 】</strong></h6>
             <%= simple_format @post.development_environment_text %>
             </p>
           </div>
@@ -90,21 +95,20 @@
 
         <div class="row">
           <div class ="col-md">
-            <p><h6><strong>作品URL：</strong></h6>
-              <a href="<%= @post.portfolio_url %>"><%= @post.portfolio_url %>
-              </a>
-            </p>
-            <p><h6><strong>ソースコード情報：</strong></h6>
-              <a href="<%= @post.source_code_url %>"><%= @post.source_code_url %>
-              </a>
-            </p>
+              <h6 class="post"><strong>作品URL：</strong></h6>
+                <a href="<%= @post.portfolio_url %>"><%= @post.portfolio_url %>
+                </a>
+              <p><h6><strong>ソースコード情報：</strong></h6>
+                <a href="<%= @post.source_code_url %>"><%= @post.source_code_url %>
+                </a>
+              </p>
           </div>
         </div>
 
         <% if @post.user == current_user %>
             <div class="row">
               <div class ="col-md text-center">
-                <%= link_to "投稿を編集する", edit_post_path(@post), class: "btn btn-outline-primary btn-block edit_post_#{@post.id}" %>
+                <%= link_to "投稿を編集する", edit_post_path(@post), class: "btn btn-outline-info btn-block edit_post_#{@post.id}" %>
                 <%= link_to "投稿を削除する", post_path(@post), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn btn-outline-danger btn-block destroy_post_#{@post.id}" %>
               </div>
             </div>
