--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class ="col-md text-center">
         <h3><%= @user.nick_name %> のルーム</h3>
@@ -6,7 +6,7 @@
   </div>
   <div class="row">
     <div class ="col-md-3 offset-md-2 text-right">
-       <%= image_tag @user.avatar.thumb.url.to_s, :size =>'200x200' %>
+       <%= image_tag @user.avatar.thumb.url.to_s, :size =>'200x200' ,class: "rounded-circle" %>
     </div>
     <div class="col-md-6">
       <h5><strong>自己紹介</strong></h5>
